--- a/Best_Restaurants/Views/Restaurants/Create.cshtml
+++ b/Best_Restaurants/Views/Restaurants/Create.cshtml
@@ -4,11 +4,12 @@
 
 @model BestRestaurants.Models.Restaurant
 
-<h4>Add name of Restaurant</h4>
+<h4>Add a new Restaurant</h4>
 @using (Html.BeginForm())
 {
     @Html.LabelFor(model => model.Description)
     @Html.TextBoxFor(model => model.Description)
+    
     <input type="submit" value="Add new restaurant" />
 }
-<p>@Html.ActionLink("Show all items", "Index")</p>
+<p>@Html.ActionLink("Show all restaurants", "Index")</p>
