--- a/Best_Restaurants/Views/Restaurants/Details.cshtml
+++ b/Best_Restaurants/Views/Restaurants/Details.cshtml
@@ -2,9 +2,11 @@
   Layout = "_Layout";
 }
 
-@model BestRestaurants.Models.Restaurant
+@model BestRestaurants.Models.Restaurant;
 
-<h2> Details</h2>
+<h2>Restaurant Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)<h3>
 <p>@Html.ActionLink("Back to list", "Index")</p>
+<p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.RestaurantId })</p>
+<p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.RestaurantId })</p>
