--- a/Best_Restaurants/Views/Restaurants/Edit.cshtml
+++ b/Best_Restaurants/Views/Restaurants/Edit.cshtml
@@ -16,6 +16,8 @@
     @Html.EditorFor(model => model.Description)
 
     
+    @Html.LabelFor(model => model.Cuisine)
+    @Html.DropDownList("CuisineId")
 
     <input type="submit" value="Save" />
 }
