--- a/Best_Restaurants/Views/Home/Index.cshtml
+++ b/Best_Restaurants/Views/Home/Index.cshtml
@@ -7,3 +7,4 @@
 <p>@Html.ActionLink("See all restaurants", "Index", "Restaurants") </p> 
 <p>@Html.ActionLink("Add restaurants", "Create", "Restaurants") </p> 
 <p>@Html.ActionLink("See all Cuisines", "Index", "Cuisines")</p>
+<p>@Html.ActionLink("Add cuisines", "Create", "Cuisines") </p> 
