--- a/Best_Restaurants/Views/Restaurants/Index.cshtml
+++ b/Best_Restaurants/Views/Restaurants/Index.cshtml
@@ -5,7 +5,7 @@
 @using BestRestaurants.Models;
 @model List<BestRestaurants.Models.Restaurant>;
 
-<h1>BestRestaurants</h1>
+<h1>Restaurant List</h1>
 
 @if (@Model.Count == 0)
 {
